--- a/wp-content/themes/wp_boilerplate-master/assets/css/mystyle.css
+++ b/wp-content/themes/wp_boilerplate-master/assets/css/mystyle.css
@@ -1,18 +1,23 @@
+h2{
+	font-size: 4rem;
+}
 .jumbotron{
 	background-color: white;
 	height: 100px;
 }
-.navbar{
-	
+.barra{
+	font-size: 1.5em;
 }
 .slyder{
 	width: 100%;
-	height: 500px;
+	height: 800px;
+}
+.title{
+	font-size: 2em;
+	text-decoration: underline;
 }
 .background{
-	background-color: blue;
-	opacity: 0.7;
-	width: 40%;
+	width: 100%;
 	position: absolute;
     top: 50%;
     left: 50%;
