--- a/wp-content/themes/wp_boilerplate-master/assets/css/mystyle.css
+++ b/wp-content/themes/wp_boilerplate-master/assets/css/mystyle.css
@@ -26,12 +26,9 @@ h2{
 #contact{
 	width: 50%;
 }
-.inner {
-	margin: 0 auto;
-	max-width: 940px;
-	padding: 67px 10px;
-	overflow: hidden;
-	}
-#map{
-   width: 100%;
+.footer{
+	background-color: #cccccc;
+}
+.footer-inner{
+	background-color: #ff00ff;
 }
