--- a/wp-content/themes/wp_boilerplate-master/assets/css/style.css
+++ b/wp-content/themes/wp_boilerplate-master/assets/css/style.css
@@ -4,9 +4,16 @@
  * @author eleannybm
  * @since 1.0
  */
-
+body{
+  background-color: #ecf0f1;
+  font-family: 'Montserrat', sans-serif;
+}
 h2{
 	font-size: 4rem;
+}
+p{
+	font-size: 400;
+	color: grey;
 }
 .jumbotron{
 	height: 150px;
