--- a/wp-content/themes/wp_boilerplate-master/assets/css/style.css
+++ b/wp-content/themes/wp_boilerplate-master/assets/css/style.css
@@ -22,6 +22,9 @@ p{
 	font-size: 1.2em;
 	background-color: #4CB1FF;
 }
+.black{
+	color: black;
+}
 #slyder{
 	width: 100%;
 	height: 500px;
@@ -42,7 +45,7 @@ p{
 .background{
 	width: 100%;
 	position: absolute;
-    top: 40%;
+    top: 80%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
