--- a/wp-content/themes/wp_boilerplate-master/assets/css/style.css
+++ b/wp-content/themes/wp_boilerplate-master/assets/css/style.css
@@ -53,6 +53,10 @@ p{
     left: 50%;
     transform: translate(-50%, -50%);
 }
+.product-img{
+	width: 80%;
+	height: 150px;
+}
 #contact{
 	width: 100%;
 }
