--- a/wp-content/themes/wp_boilerplate-master/assets/css/style.css
+++ b/wp-content/themes/wp_boilerplate-master/assets/css/style.css
@@ -22,6 +22,9 @@ p{
 	font-size: 1.2em;
 	background-color: #4CB1FF;
 }
+.carousel-ppal{
+ text-shadow: 1px 2px black;
+}
 .nav-form{
 	display: none;
 }
