--- a/wp-content/themes/wp_boilerplate-master/assets/css/style.css
+++ b/wp-content/themes/wp_boilerplate-master/assets/css/style.css
@@ -130,6 +130,10 @@ p{
 body{
 	padding: 20px;
    }
+ h2,h3{
+ 	font-size: 2.3rem;
+ 	text-align: center;
+ }
 .header-logo{
  	width: 30%;
  }
@@ -145,12 +149,21 @@ body{
 	width: 45%;
 	height: auto;
   }
+.title-brand{
+	height: 250px;
+}
 .slider {
    width: 80%;
   }
 .fab{
 	font-size: 30px;
- }   
+ }  
+ .fas{
+ 	font-size: 100px;
+ } 
+ .services-fas{
+ 	font-size: 40px;
+ }
 .contacto{
  	width: 20%;
  }
