--- a/wp-content/themes/wp_boilerplate-master/assets/css/style.css
+++ b/wp-content/themes/wp_boilerplate-master/assets/css/style.css
@@ -63,6 +63,7 @@ p{
 .map{
   width : 80%;
   height: 500px;
+  border: 0;
 }
 @-webkit-keyframes scroll {
   0% {
@@ -179,6 +180,9 @@ body{
  }
  .services-fas{
  	font-size: 30px;
+ }
+ .product-img{
+  width: 90%;
  }
  .slider {
    width: 80%;
