se agrego google analityc

--- a/wp-content/themes/wp_boilerplate-master/style.css
+++ b/wp-content/themes/wp_boilerplate-master/style.css
@@ -1,8 +1,7 @@
 /*
-Theme Name: Desafío Latam
-Theme URI: https://github.com/DesafioLatam/wp_boilerplate.git
-Author: Desafío Latam
-Author URI: http://www.desafiolatam.com
+Theme Name: Toner Chile
+Theme URI: https://github.com/eleanny/tonerChile
+Author: Eleanny Bastardo
 Description: Estructura de plantilla básica
 Version: 1.5
 License: GNU General Public License v2 or later
